fix: mobile alignments, svg issues on mobile

--- a/portfolio/frontend/src/components/Experience/Experience.scss
+++ b/portfolio/frontend/src/components/Experience/Experience.scss
@@ -39,6 +39,10 @@
   .service-content {
     text-align: left;
     padding: 0rem 1.666rem;
+    .service-title {
+      text-align: left;
+      margin: 0;
+    }
     .s-description {
       text-align: left;
       font-weight: bold;
@@ -65,6 +69,9 @@
 
     .service-content {
       padding: 1.333rem;
+      .service-title {
+        text-align: center;
+      }
     }
   }
 }
